--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^5.2.8",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "moment": "^2.29.1",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
@@ -42,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://34.227.147.70:80"
+  "proxy": "http://localhost:80"
 }
