--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://10.0.3.200:8080/"
+  }
+  // "proxy": "http://10.0.3.200:8080/"
 }
